k8s/manifests/homarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`home.harvestasya.org`)
    services:
    - name: homarr
      port: 7575
    middlewares:
    - name: security-headers
      namespace: traefik
  tls:
    secretName: harvestasya-wildcard-tls
